Replace pip install mcpi with %pip which always installs in the right environment

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -4253,7 +4253,14 @@
    "source": [
     "# if running this notebook on Colab or Kaggle, we just pip install urlextract\n",
     "if IS_COLAB or IS_KAGGLE:\n",
-    "    !pip install -q -U urlextract"
+    "    %pip install -q -U urlextract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** inside a Jupyter notebook, always use `%pip` instead of `!pip`, as `!pip` may install the library inside the wrong environment, while `%pip` makes sure it's installed inside the currently running environment."
    ]
   },
   {
