--- a/16_nlp_with_rnns_and_attention.ipynb
+++ b/16_nlp_with_rnns_and_attention.ipynb
@@ -65,8 +65,8 @@
     "IS_KAGGLE = \"kaggle_secrets\" in sys.modules\n",
     "\n",
     "if IS_COLAB:\n",
-    "    !pip install -q -U tensorflow-addons\n",
-    "    !pip install -q -U transformers\n",
+    "    %pip install -q -U tensorflow-addons\n",
+    "    %pip install -q -U transformers\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
