--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -52,8 +52,7 @@
     "\n",
     "if IS_COLAB or IS_KAGGLE:\n",
     "    !apt update && apt install -y libpq-dev libsdl2-dev swig xorg-dev xvfb\n",
-    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d]\n",
-    "    %pip install -q -U atari_py==0.2.5\n",
+    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari,accept-rom-license]\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
@@ -2179,6 +2178,35 @@
    "metadata": {},
    "source": [
     "Let's use TF-Agents to create an agent that will learn to play Breakout. We will use the Deep Q-Learning algorithm, so you can easily compare the components with the previous implementation, but TF-Agents implements many other (and more sophisticated) algorithms!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to download and install the Atari ROMs. This can be done very easily using the `AutoROM` tool, if you accept the license:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AutoROM will download the Atari 2600 ROMs.\n",
+      "They will be installed to:\n",
+      "\t/Users/ageron/miniconda3/envs/tf2/lib/python3.8/site-packages/AutoROM/roms\n",
+      "\n",
+      "Existing ROMs will be overwritten.\n",
+      "Done!                                                                           \n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.prefix}/bin/AutoROM --quiet --accept-license"
    ]
   },
   {
@@ -4387,7 +4415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
