Fix 'Open in Kaggle' link

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -23,7 +23,7 @@
     "    <a href=\"https://colab.research.google.com/github/ageron/handson-ml2/blob/master/18_reinforcement_learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/ageron/handson-ml2/blob/add-kaggle-badge/18_reinforcement_learning.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" /></a>\n",
+    "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/ageron/handson-ml2/blob/master/18_reinforcement_learning.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" /></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -52,7 +52,8 @@
     "\n",
     "if IS_COLAB or IS_KAGGLE:\n",
     "    !apt update && apt install -y libpq-dev libsdl2-dev swig xorg-dev xvfb\n",
-    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari,accept-rom-license]\n",
+    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari_py] AutoROM\n",
+    "    AUTOROM_PREFIX=\"/bin\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
@@ -4419,5 +4420,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
