Fix AutoROM install and path on Colab

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -53,7 +53,6 @@
     "if IS_COLAB or IS_KAGGLE:\n",
     "    !apt update && apt install -y libpq-dev libsdl2-dev swig xorg-dev xvfb\n",
     "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari_py] AutoROM\n",
-    "    AUTOROM_PREFIX=\"/bin\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
@@ -2190,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2206,10 @@
     }
    ],
    "source": [
-    "!{sys.prefix}/bin/AutoROM --quiet --accept-license"
+    "if IS_COLAB:\n",
+    "    !{sys.prefix}/local/bin/AutoROM --quiet --accept-license\n",
+    "else:\n",
+    "    !{sys.prefix}/bin/AutoROM --quiet --accept-license"
    ]
   },
   {
@@ -2219,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2240,7 @@
        "<tf_agents.environments.wrappers.TimeLimit at 0x7fe46bf261d0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2261,7 +2263,7 @@
        "<gym.envs.atari.atari_env.AtariEnv at 0x7fe46bdbba50>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2272,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2331,7 @@
        "        [0, 0, 0]]], dtype=uint8))"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2341,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2398,7 +2400,7 @@
        "        [0, 0, 0]]], dtype=uint8))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2501,7 +2503,7 @@
        "        [0, 0, 0]]], dtype=uint8))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2519,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2528,7 +2530,7 @@
        "BoundedArraySpec(shape=(210, 160, 3), dtype=dtype('uint8'), name='observation', minimum=0, maximum=255)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2539,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2548,7 +2550,7 @@
        "BoundedArraySpec(shape=(), dtype=dtype('int64'), name='action', minimum=0, maximum=3)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2559,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2570,7 @@
        "TimeStep(step_type=ArraySpec(shape=(), dtype=dtype('int32'), name='step_type'), reward=ArraySpec(shape=(), dtype=dtype('float32'), name='reward'), discount=BoundedArraySpec(shape=(), dtype=dtype('float32'), name='discount', minimum=0.0, maximum=1.0), observation=BoundedArraySpec(shape=(210, 160, 3), dtype=dtype('uint8'), name='observation', minimum=0, maximum=255))"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2593,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2602,7 +2604,7 @@
        "<tf_agents.environments.wrappers.ActionRepeat at 0x7fe46872cad0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2627,7 @@
        "<gym.envs.atari.atari_env.AtariEnv at 0x7fe46bdbba50>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2700,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2709,7 +2711,7 @@
        "<tf_agents.environments.wrappers.ActionRepeat at 0x7fe4686ff550>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2720,7 +2722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2731,7 @@
        "<gym.envs.atari.atari_env.AtariEnv at 0x7fe3de8b6c90>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2754,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2785,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2796,7 @@
        "<tf_agents.environments.atari_wrappers.AtariTimeLimit at 0x7fe46bf46510>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2824,7 +2826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2845,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2944,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2986,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3009,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3033,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3049,7 +3051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3060,7 @@
        "<tf.Tensor: shape=(), dtype=int64, numpy=0>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3069,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -3100,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3122,7 +3124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3179,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -3194,7 +3196,7 @@
        " 'discount')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3205,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -3214,7 +3216,7 @@
        "TensorShape([2, 3, 84, 84, 4])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3225,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3236,7 @@
        "TensorShape([2, 2, 84, 84, 4])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -3258,7 +3260,7 @@
        "       [1, 1, 1]], dtype=int32)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3269,7 +3271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3331,7 +3333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3350,7 +3352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3377,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3612,7 +3614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3629,7 +3631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3673,7 +3675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3684,7 @@
        "[121958, 671155, 131932, 365838, 259178]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3699,7 +3701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -3716,7 +3718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -3740,7 +3742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3763,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -3772,7 +3774,7 @@
        "array([757386, 904203, 190588, 595754, 865356], dtype=object)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3786,7 +3788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -3803,7 +3805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -3834,7 +3836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3883,7 +3885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -3895,7 +3897,7 @@
        "       [0, 0, 0, 0]], dtype=int32))"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3908,7 +3910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -3920,7 +3922,7 @@
        "       [0, 0, 0, 0]], dtype=int32))"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3963,7 +3965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3979,7 +3981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -3988,7 +3990,7 @@
        "Box(-inf, inf, (8,), float32)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3999,7 +4001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -4009,7 +4011,7 @@
        "        0.11471219,  0.        ,  0.        ], dtype=float32)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4040,7 +4042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -4049,7 +4051,7 @@
        "Discrete(4)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4078,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4113,7 +4115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4154,7 +4156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4183,7 +4185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4202,7 +4204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4219,7 +4221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -4263,7 +4265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -4298,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4323,7 +4325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4355,7 +4357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
