Fix typo: gym[box2d,atari_py] => gym[box2d,atari]

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "if IS_COLAB or IS_KAGGLE:\n",
     "    !apt update && apt install -y libpq-dev libsdl2-dev swig xorg-dev xvfb\n",
-    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari_py] AutoROM\n",
+    "    %pip install -q -U tf-agents pyvirtualdisplay gym[box2d,atari] AutoROM\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
