Change preprocessing of categorical attributes in Titanic exercise, fixes #488

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -3111,7 +3111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OrdinalEncoder, OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -3121,7 +3121,6 @@
    "outputs": [],
    "source": [
     "cat_pipeline = Pipeline([\n",
-    "        (\"ordinal_encoder\", OrdinalEncoder()),    \n",
     "        (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
     "        (\"cat_encoder\", OneHotEncoder(sparse=False)),\n",
     "    ])"
@@ -3187,7 +3186,8 @@
     }
    ],
    "source": [
-    "X_train = preprocess_pipeline.fit_transform(train_data)\n",
+    "X_train = preprocess_pipeline.fit_transform(\n",
+    "    train_data[num_attribs + cat_attribs])\n",
     "X_train"
    ]
   },
@@ -3250,7 +3250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = preprocess_pipeline.transform(test_data)\n",
+    "X_test = preprocess_pipeline.transform(test_data[num_attribs + cat_attribs])\n",
     "y_pred = forest_clf.predict(X_test)"
    ]
   },
@@ -4588,7 +4588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   },
   "nav_menu": {},
   "toc": {
