Correct small typo

--- a/07_ensemble_learning_and_random_forests.ipynb
+++ b/07_ensemble_learning_and_random_forests.ipynb
@@ -441,7 +441,7 @@
     }
    ],
    "source": [
-    "fix, axes = plt.subplots(ncols=2, figsize=(10,4), sharey=True)\n",
+    "fig, axes = plt.subplots(ncols=2, figsize=(10,4), sharey=True)\n",
     "plt.sca(axes[0])\n",
     "plot_decision_boundary(tree_clf, X, y)\n",
     "plt.title(\"Decision Tree\", fontsize=14)\n",
