--- a/07_ensemble_learning_and_random_forests.ipynb
+++ b/07_ensemble_learning_and_random_forests.ipynb
@@ -1683,7 +1683,7 @@
     "plt.figure(figsize=(10, 4))\n",
     "\n",
     "plt.subplot(121)\n",
-    "plt.plot(errors, \"b.-\")\n",
+    "plt.plot(np.arange(1, len(errors) + 1), errors, \"b.-\")\n",
     "plt.plot([bst_n_estimators, bst_n_estimators], [0, min_error], \"k--\")\n",
     "plt.plot([0, 120], [min_error, min_error], \"k--\")\n",
     "plt.plot(bst_n_estimators, min_error, \"ko\")\n",
