Added windows support for removing a file
`!rm -rf {model_name}` only works on Linux, I have added a Windows version of it.

--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -240,7 +240,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf {model_name}"
+    "#For Linux or MAC",
+    "!rd /s /q "my_mnist_model"",
+    "#For Windows",
+    ""
    ]
   },
   {
