--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -241,9 +241,9 @@
    "outputs": [],
    "source": [
     "#For Linux or MAC",
-    "!rd /s /q "my_mnist_model"",
+    "!rm -rf {model_name}",
     "#For Windows",
-    ""
+    "!rd /s /q "my_mnist_model""
    ]
   },
   {
