Replace rm -rf {model_name} with shutil.rmtree(model_name)

--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -240,10 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On Linux\n",
-    "!rm -rf {model_name}\n",
-    "#On Windows\n",
-    "#!rd /s /q \"my_mnist_model\""
+    "import shutil\n",
+    "\n",
+    "shutil.rmtree(model_name)"
    ]
   },
   {
@@ -2071,7 +2070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
