--- a/13_loading_and_preprocessing_data.ipynb
+++ b/13_loading_and_preprocessing_data.ipynb
@@ -1429,7 +1429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "person.desc   person.proto  person_pb2.py\r\n"
+      "person.desc   person.proto  person_pb2.py\n"
      ]
     }
    ],
@@ -4539,7 +4539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   },
   "nav_menu": {
    "height": "264px",
