I don't think line 61 has any use. I think it could be deleted

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -2650,16 +2650,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing_tr = pd.DataFrame(X, columns=housing_num.columns,\n",
-    "                          index=housing_num.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
@@ -6244,7 +6234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6258,7 +6248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.7"
   },
   "nav_menu": {
    "height": "279px",
