--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -2694,7 +2694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Jun  1 2022, 06:36:29) \n[Clang 12.0.0 ]"
   },
   "nav_menu": {},
   "toc": {
