--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -1381,7 +1381,7 @@
     "X_val_poly_scaled = poly_scaler.transform(X_val)\n",
     "\n",
     "sgd_reg = SGDRegressor(max_iter=1, tol=-np.infty, warm_start=True,\n",
-    "                       penalty=None, learning_rate=\"constant\", eta0=0.0005, random_state=42)\n",
+    "                       penalty=None, learning_rate=\"constant\", eta0=0.0005, random_state=42)\n",    #新版已不接受np.infty，要改为None。
     "\n",
     "minimum_val_error = float(\"inf\")\n",
     "best_epoch = None\n",
@@ -1429,8 +1429,8 @@
     }
    ],
    "source": [
-    "sgd_reg = SGDRegressor(max_iter=1, tol=-np.infty, warm_start=True,\n",
-    "                       penalty=None, learning_rate=\"constant\", eta0=0.0005, random_state=42)\n",
+    "sgd_reg = SGDRegressor(max_iter=1, tol=None, warm_start=True,\n",
+    "                       penalty=None, learning_rate=\"constant\", eta0=0.0005, random_state=42)\n",      #新版已不接受np.infty，要改为None。
     "\n",
     "n_epochs = 500\n",
     "train_errors, val_errors = [], []\n",
