--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -1773,7 +1773,7 @@
    "outputs": [],
    "source": [
     "X = iris[\"data\"][:, 3:]  # petal width\n",
-    "y = (iris[\"target\"] == 2).astype(np.int)  # 1 if Iris virginica, else 0"
+    "y = (iris[\"target\"] == 2).astype(np.int32)  # 1 if Iris virginica, else 0"
    ]
   },
   {
