--- a/05_support_vector_machines.ipynb
+++ b/05_support_vector_machines.ipynb
@@ -125,7 +125,7 @@
     "y = y[setosa_or_versicolor]\n",
     "\n",
     "# SVM Classifier model\n",
-    "svm_clf = SVC(kernel=\"linear\", C=float(\"inf\"))\n",
+    "svm_clf = SVC(kernel=\"linear\", C=float(10e10))\n",
     "svm_clf.fit(X, y)"
    ]
   },
