--- a/10_neural_nets_with_keras.ipynb
+++ b/10_neural_nets_with_keras.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "iris = load_iris()\n",
     "X = iris.data[:, (2, 3)]  # petal length, petal width\n",
-    "y = (iris.target == 0).astype(np.int)\n",
+    "y = (iris.target == 0).astype(np.int32)\n",
     "\n",
     "per_clf = Perceptron(max_iter=1000, tol=1e-3, random_state=42)\n",
     "per_clf.fit(X, y)\n",
