Fix deprecation warning by updating import of shift from scipy.ndimage

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -1961,7 +1961,7 @@
     }
    ],
    "source": [
-    "from scipy.ndimage.interpolation import shift\n",
+    "from scipy.ndimage import shift\n",
     "def shift_digit(digit_array, dx, dy, new=0):\n",
     "    return shift(digit_array.reshape(28, 28), [dy, dx], cval=new).reshape(784)\n",
     "\n",
@@ -2329,7 +2329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.ndimage.interpolation import shift"
+    "from scipy.ndimage import shift"
    ]
   },
   {
