fixed deprecated sparse argument

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -3122,7 +3122,7 @@
    "source": [
     "cat_pipeline = Pipeline([\n",
     "        (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
-    "        (\"cat_encoder\", OneHotEncoder(sparse=False)),\n",
+    "        (\"cat_encoder\", OneHotEncoder(sparse_output=False)),\n",
     "    ])"
    ]
   },
