Fix markdown bold formatting in math_linear_algebra.ipynb

--- a/math_linear_algebra.ipynb
+++ b/math_linear_algebra.ipynb
@@ -2098,7 +2098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is also ***distributive* over addition** of matrices, meaning that $(Q + R)S = QS + RS$. For example:"
+    "It is also **distributive over addition** of matrices, meaning that $(Q + R)S = QS + RS$. For example:"
    ]
   },
   {
