Fix coef_[0][0] => coef_[0]

--- a/01_the_machine_learning_landscape.ipynb
+++ b/01_the_machine_learning_landscape.ipynb
@@ -3872,7 +3872,7 @@
     "Xsample = np.c_[sample_data[\"GDP per capita\"]]\n",
     "ysample = np.c_[sample_data[\"Life satisfaction\"]]\n",
     "ridge.fit(Xsample, ysample)\n",
-    "t0ridge, t1ridge = ridge.intercept_[0], ridge.coef_[0][0]\n",
+    "t0ridge, t1ridge = ridge.intercept_[0], ridge.coef_[0]\n",
     "plt.plot(X, t0ridge + t1ridge * X, \"b\", label=\"Regularized linear model on partial data\")\n",
     "\n",
     "plt.legend(loc=\"lower right\")\n",
