Set gym version to 0.21.0

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -54,7 +54,7 @@
     "    !apt update && apt install -y libpq-dev libsdl2-dev swig xorg-dev xvfb\n",
     "    %pip install -U tf-agents pyvirtualdisplay\n",
     "    %pip install -U gym~=0.21.0\n",
-    "    %pip install -U gym[box2d,atari,accept-rom-license]\n",
+    "    %pip install -U gym[box2d,atari,accept-rom-license]~=0.21.0\n",
     "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
